# Image_Processor

./: README.md
image_processor/: BmpInputOutput.cpp  BmpInputOutput.h  CMakeLists.txt  Colour.cpp  Colour.h  Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Filter.h  Gaussian.cpp  Gaussian.h  GrayScale.cpp  GrayScale.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  MyFilter.cpp  MyFilter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h  crop_test.cpp  edgedetection_test.cpp  grayscale_test.cpp  help.txt  image_processor.cpp  image_processor.h  myfilter_test.cpp  negative_test.cpp  read_export_test.cpp  readme.md  sharpening_test.cpp
image_processor/tests/: crop_test.cpp  grayscale_test.cpp  read_export_test.cpp  sharpening_test.cpp
